@@ -7,7 +7,10 @@ import org.zstack.core.cloudbus.CloudBus;
 import org.zstack.core.cloudbus.MessageSafe;
 import org.zstack.core.componentloader.PluginRegistry;
 import org.zstack.core.errorcode.ErrorFacade;
+import org.zstack.core.thread.SyncTask;
 import org.zstack.core.thread.SyncThread;
+import org.zstack.core.thread.ThreadFacade;
+import org.zstack.core.thread.ThreadGlobalProperty;
 import org.zstack.header.errorcode.OperationFailureException;
 import org.zstack.header.AbstractService;
 import org.zstack.header.apimediator.ApiMessageInterceptionException;
@@ -25,6 +28,9 @@ import org.zstack.utils.TypeUtils;
 import org.zstack.utils.Utils;
 import org.zstack.utils.gson.JSONObjectUtil;
 import org.zstack.utils.logging.CLogger;
+import org.zstack.zql.ZQL;
+import org.zstack.zql.ZQLContext;
+import org.zstack.zql.ZQLQueryResult;
 
 import static org.zstack.core.Platform.argerr;
 
@@ -43,6 +49,11 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
     private CloudBus bus;
     @Autowired
     private ErrorFacade errf;
+    @Autowired
+    private ThreadFacade thdf;
+
+    public static final String USER_TAG = "__userTag__";
+    public static final String SYSTEM_TAG = "__systemTag__";
 
     private void validateConditions(List<QueryCondition> conditions) {
         for (QueryCondition cond : conditions) {
@@ -54,19 +65,15 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
     @Override
     public <T> List<T> query(APIQueryMessage msg, Class<T> inventoryClass) {
         validateConditions(msg.getConditions());
-
-        QueryBuilderFactory factory = getFactory(queryBuilderType);
-        QueryBuilder builder = factory.createQueryBuilder();
-        return builder.query(msg, inventoryClass);
+        ZQLQueryResult result = queryUseZQL(msg, inventoryClass);
+        return result.inventories;
     }
 
     @Override
     public long count(APIQueryMessage msg, Class inventoryClass) {
         validateConditions(msg.getConditions());
-
-        QueryBuilderFactory factory = getFactory(queryBuilderType);
-        QueryBuilder builder = factory.createQueryBuilder();
-        return builder.count(msg, inventoryClass);
+        ZQLQueryResult result = queryUseZQL(msg, inventoryClass);
+        return result.total;
     }
 
     private void populateExtensions() {
@@ -93,7 +100,7 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
             return;
         }
 
-        List<Class> inventoryClasses = BeanUtils.scanClass("org.zstack", Inventory.class);
+        Set<Class<?>> inventoryClasses = BeanUtils.reflections.getTypesAnnotatedWith(Inventory.class);
         List<String> errors = new ArrayList<>();
         for (Class clz : inventoryClasses) {
             boolean error = false;
@@ -154,11 +161,31 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
         }
     }
 
-    @SyncThread(signature = "batch-query", level = 50)
     private void handle(APIBatchQueryMsg msg) {
-        APIBatchQueryReply reply = new APIBatchQueryReply();
-        reply.setResult(new BatchQuery().query(msg));
-        bus.reply(msg, reply);
+        thdf.syncSubmit(new SyncTask<Void>() {
+            @Override
+            public Void call() {
+                APIBatchQueryReply reply = new APIBatchQueryReply();
+                reply.setResult(new BatchQuery().query(msg));
+                bus.reply(msg, reply);
+                return null;
+            }
+
+            @Override
+            public String getName() {
+                return getSyncSignature();
+            }
+
+            @Override
+            public String getSyncSignature() {
+                return "batch-query";
+            }
+
+            @Override
+            public int getSyncLevel() {
+                return ThreadGlobalProperty.MAX_THREAD_NUM / 2;
+            }
+        });
     }
 
     private void handle(APIGenerateQueryableFieldsMsg msg) {
@@ -180,6 +207,31 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
     private Map<Class, Method> replySetter = new HashMap<>();
     private Map<Class, AutoQuery> autoQueryMap = new HashMap<>();
 
+    private Method getReplySetter(AutoQuery at) {
+        Class replyClass = at.replyClass();
+        Class inventoryClass = at.inventoryClass();
+        try {
+            Method setter = replySetter.get(inventoryClass);
+            if (setter == null) {
+                setter = replyClass.getDeclaredMethod("setInventories", List.class);
+                if (setter == null) {
+                    throw new OperationFailureException(errf.stringToInternalError(
+                            String.format("query reply[%s] has no method setInventories()", replyClass.getName())
+                    ));
+                }
+                setter.setAccessible(true);
+                replySetter.put(inventoryClass, setter);
+            }
+
+            return setter;
+        } catch (OperationFailureException of) {
+            throw of;
+        } catch (Exception e) {
+            logger.warn(e.getMessage(), e);
+            throw new OperationFailureException(errf.throwableToInternalError(e));
+        }
+    }
+
     private void handle(APIQueryMessage msg) {
         AutoQuery at = autoQueryMap.get(msg.getClass());
         if (at == null) {
@@ -194,8 +246,26 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
 
         Class replyClass = at.replyClass();
         Class inventoryClass = at.inventoryClass();
+
         try {
-            APIQueryReply reply = (APIQueryReply) replyClass.newInstance();
+            APIQueryReply reply = (APIQueryReply) replyClass.getConstructor().newInstance();
+            Method replySetter = getReplySetter(at);
+            ZQLQueryResult result = queryUseZQL(msg, inventoryClass);
+            if (result.total != null) {
+                reply.setTotal(result.total);
+            }
+            if (result.inventories != null) {
+                replySetter.invoke(reply, result.inventories);
+            }
+            bus.reply(msg, reply);
+        } catch (OperationFailureException of) {
+            throw of;
+        } catch (Exception e) {
+            throw new CloudRuntimeException(e);
+        }
+
+            /*
+        try {
             Method setter = replySetter.get(inventoryClass);
             if (setter == null) {
                 setter = replyClass.getDeclaredMethod("setInventories", List.class);
@@ -228,6 +298,88 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
             logger.warn(e.getMessage(), e);
             throw new OperationFailureException(errf.throwableToInternalError(e));
         }
+            */
+    }
+
+    private String toZQLConditionString(QueryCondition c) {
+        // make every condition value as string, the ZQL
+        // will put them in right type because it knows every field's type
+
+        QueryOp op = QueryOp.valueOf(c.getOp());
+        if (c.getValue() == null) {
+            return String.format("%s %s", c.getName(), c.getOp());
+        } else if (op == QueryOp.IN || op == QueryOp.NOT_IN) {
+            List<String> values = new ArrayList<>();
+            for (String v : c.getValue().split(",")) {
+                values.add(String.format("'%s'", v));
+            }
+
+            if (values.isEmpty()) {
+                // use '' to represent an empty collection
+                values.add("''");
+            }
+
+            return String.format("%s %s (%s)", c.getName(), c.getOp(), StringUtils.join(values, ","));
+        } else {
+            return String.format("%s %s '%s'", c.getName(), c.getOp(), c.getValue());
+        }
+    }
+
+    public ZQLQueryResult queryUseZQL(APIQueryMessage msg, Class inventoryClass) {
+        List<String> sb = new ArrayList<>();
+        sb.add(msg.isCount() ? "count" : "query");
+        sb.add(msg.getFields() == null || msg.getFields().isEmpty() ? ZQL.queryTargetNameFromInventoryClass(inventoryClass) : ZQL.queryTargetNameFromInventoryClass(inventoryClass) + "." + msg.getFields().get(0));
+
+        List<QueryCondition> tagConditions = new ArrayList<>();
+
+        if (msg.getConditions() != null && !msg.getConditions().isEmpty()) {
+            List<String> conds = new ArrayList<>();
+            msg.getConditions().forEach(c -> {
+                if (c.getName().equals(SYSTEM_TAG) || c.getName().equals(USER_TAG)) {
+                    tagConditions.add(c);
+                    return;
+                }
+
+                conds.add(toZQLConditionString(c));
+            });
+
+            if (!conds.isEmpty()) {
+                sb.add("where");
+                sb.add(StringUtils.join(conds, " and "));
+            }
+        }
+
+        if (!tagConditions.isEmpty()) {
+            List<String> byConds = new ArrayList<>();
+            tagConditions.forEach(c -> byConds.add(toZQLConditionString(c)));
+            sb.add(String.format("restrict by (%s)", StringUtils.join(byConds, ",")));
+        }
+
+        if (!msg.isCount() && msg.isReplyWithCount()) {
+            sb.add("return with (total)");
+        }
+
+        if (msg.getSortBy() != null) {
+            sb.add(String.format("order by %s %s", msg.getSortBy(), msg.getSortDirection()));
+        }
+
+        if (msg.getLimit() != null) {
+            sb.add(String.format("limit %s", msg.getLimit()));
+        }
+
+        if (msg.getStart() != null) {
+            sb.add(String.format("offset %s", msg.getStart()));
+        }
+
+        ZQLContext.putAPISession(msg.getSession());
+        String text = StringUtils.join(sb, " ");
+        if (logger.isTraceEnabled()) {
+            logger.trace(text);
+        }
+        ZQL zql = ZQL.fromString(text);
+        ZQLQueryResult result = zql.execute();
+        ZQLContext.cleanAPISession();
+        return result;
     }
 
     private void handle(APIGenerateInventoryQueryDetailsMsg msg) {
